# moduletto

./: .gitignore  BENCHMARKS.md  Cargo.toml  README.md
benches/: moduletto_bench.rs
examples/: bench_no_std.rs  bench_wasm.rs  hybrid_pq_aes.rs  kyber_benchmark.rs  no_std_embedded.rs  wasm_usage.rs
examples/wasm_demo/: README.md  build.sh  index.html  serve.sh
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_barrett.rs  fuzz_ct_arith.rs  fuzz_ct_primitives.rs  fuzz_ntt_roundtrip.rs  fuzz_poly_mul.rs
proofs/: .BarrettReduction.aux  .ConstantTime.aux  .ModularArithmetic.aux  .NTT.aux  .lia.cache  .nia.cache  BarrettReduction.glob  BarrettReduction.v  BarrettReduction.vo  ConstantTime.glob  ConstantTime.v  ConstantTime.vo  Makefile  ModularArithmetic.glob  ModularArithmetic.v  ModularArithmetic.vo  NTT.glob  NTT.v  NTT.vo  test_moduletto.ml
src/: lib.rs  modn.rs  modn_ct.rs  ntt.rs  wasm.rs
